Fix for bug 486587 -  Rework MMgc profiler APIs for dumping memory info to spy file (r=treilly+,lhansen+)